feat: Add line length limit =88 in template/pyproject.toml.jinja

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -27,6 +27,7 @@ dev = [
 packages = ["src/{{ package_name }}"]
 
 [tool.ruff]
+line-length = 88
 target-version = "{{ py_target }}"
 
 [tool.pytest.ini_options]
